MVP架构初探（一）：增加base类、contract类

--- a/mvpdemos/src/main/AndroidManifest.xml
+++ b/mvpdemos/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".simple_mvp.SimpleActivity"/>
+        <activity android:name=".car_mvp.CarActivity"/>
     </application>
 
 </manifest>
